Fixed fonts for score.
Score fonts were unreadable with the numbers in a sans-serif font. Change the font of the scores section to be legible.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -89,6 +89,10 @@ section.score {
     text-align: center;
 }
 
+section.score h1 {
+    font-family: 'Mate', serif;
+}
+
 section.score>h1>i {
     border: var(--icon-border);
     border-radius: 4px;
